tests/init/init.exp
Error: hoisted.js:10
 10:   f(); // error, possibly undefined
       ^ Cannot call `f` because possibly uninitialized variable [1] is not a function.
  References:
    8:     var f = function () {};
               ^ [1]: possibly uninitialized variable

Error: hoisted.js:17
 17:   f(); // error, possibly undefined
       ^ Cannot call `f` because possibly uninitialized variable [1] is not a function.
  References:
   15:     var f = function () {};
               ^ [1]: possibly uninitialized variable

Error: hoisted.js:31
 31:   f(); // error, possibly undefined
       ^ Cannot call `f` because uninitialized variable [1] is not a function.
  References:
   29:     var f = function () {};
               ^ [1]: uninitialized variable

Error: hoisted.js:38
 38:   f(); // error, possibly undefined
       ^ Cannot call `f` because possibly uninitialized variable [1] is not a function.
  References:
   36:     var f = function () {};
               ^ [1]: possibly uninitialized variable

Error: hoisted.js:45
 45:   f(); // error, possibly undefined
       ^ Cannot call `f` because possibly uninitialized variable [1] is not a function.
  References:
   43:     var f = function () {};
               ^ [1]: possibly uninitialized variable

Error: hoisted2.js:17
 17:   var y:number = x; // error
                      ^ Cannot assign `x` to `y` because uninitialized variable [1] is incompatible with number [2].
  References:
   16:   var x:number;
             ^ [1]: uninitialized variable
   17:   var y:number = x; // error
               ^^^^^^ [2]: number

Error: hoisted2.js:33
 33:     var y:number = x; // error
                        ^ Cannot assign `x` to `y` because uninitialized variable [1] is incompatible with number [2].
  References:
   31:     var x:number = 0;
               ^ [1]: uninitialized variable
   33:     var y:number = x; // error
                 ^^^^^^ [2]: number

Error: hoisted2.js:39
 39:   var y:number = x; // error
                      ^ Cannot assign `x` to `y` because uninitialized variable [1] is incompatible with number [2].
  References:
   41:     var x:number = 0;
               ^ [1]: uninitialized variable
   39:   var y:number = x; // error
               ^^^^^^ [2]: number

Error: hoisted2.js:50
 50:   var y:number = x; // error
                      ^ Cannot assign `x` to `y` because possibly uninitialized variable [1] is incompatible with number [2].
  References:
   48:     var x:number = 0;
               ^ [1]: possibly uninitialized variable
   50:   var y:number = x; // error
               ^^^^^^ [2]: number

Error: hoisted2.js:69
 69:   var y:number = x; // error, possibly uninitialized
                      ^ Cannot assign `x` to `y` because possibly uninitialized variable [1] is incompatible with number [2].
  References:
   65:   var x:number;
             ^ [1]: possibly uninitialized variable
   69:   var y:number = x; // error, possibly uninitialized
               ^^^^^^ [2]: number

Error: hoisted2.js:94
 94:   var y:number = x; // error, possibly uninitialized
                      ^ Cannot assign `x` to `y` because possibly uninitialized variable [1] is incompatible with number [2].
  References:
   85:   var x:number;
             ^ [1]: possibly uninitialized variable
   94:   var y:number = x; // error, possibly uninitialized
               ^^^^^^ [2]: number

Error: hoisted2.js:124
124:   var y:number = x; // error
                      ^ Cannot assign `x` to `y` because uninitialized variable [1] is incompatible with number [2].
  References:
  127:       var x:number = 0;
                 ^ [1]: uninitialized variable
  124:   var y:number = x; // error
               ^^^^^^ [2]: number

Error: hoisted2.js:137
137:   var y:number = x; // error
                      ^ Cannot assign `x` to `y` because possibly uninitialized variable [1] is incompatible with number [2].
  References:
  135:       var x:number = 0;
                 ^ [1]: possibly uninitialized variable
  137:   var y:number = x; // error
               ^^^^^^ [2]: number

Error: hoisted2.js:146
146:       var y:number = x; // error
                          ^ Cannot assign `x` to `y` because possibly uninitialized variable [1] is incompatible with number [2].
  References:
  144:       var x:number = 0;
                 ^ [1]: possibly uninitialized variable
  146:       var y:number = x; // error
                   ^^^^^^ [2]: number

Error: hoisted2.js:160
160:   var y:number = x; // error
                      ^ Cannot assign `x` to `y` because uninitialized variable [1] is incompatible with number [2].
  References:
  162:     var x:number = 0;
               ^ [1]: uninitialized variable
  160:   var y:number = x; // error
               ^^^^^^ [2]: number

Error: hoisted2.js:171
171:   var y:number = x; // error
                      ^ Cannot assign `x` to `y` because possibly uninitialized variable [1] is incompatible with number [2].
  References:
  169:     var x:number = 0;
               ^ [1]: possibly uninitialized variable
  171:   var y:number = x; // error
               ^^^^^^ [2]: number

Error: hoisted2.js:184
184:   var y:number = x; // error
                      ^ Cannot assign `x` to `y` because uninitialized variable [1] is incompatible with number [2].
  References:
  186:     var x:number = 0;
               ^ [1]: uninitialized variable
  184:   var y:number = x; // error
               ^^^^^^ [2]: number

Error: hoisted2.js:208
208:   var y:number = x; // error
                      ^ Cannot assign `x` to `y` because uninitialized variable [1] is incompatible with number [2].
  References:
  210:     var x:number = 0;
               ^ [1]: uninitialized variable
  208:   var y:number = x; // error
               ^^^^^^ [2]: number

Error: hoisted2.js:219
219:   var y:number = x; // error
                      ^ Cannot assign `x` to `y` because uninitialized variable [1] is incompatible with number [2].
  References:
  217:     var x:number = 0;
               ^ [1]: uninitialized variable
  219:   var y:number = x; // error
               ^^^^^^ [2]: number

Error: hoisted2.js:232
232:   var y:number = x; // error
                      ^ Cannot assign `x` to `y` because uninitialized variable [1] is incompatible with number [2].
  References:
  234:     var x:number = 0;
               ^ [1]: uninitialized variable
  232:   var y:number = x; // error
               ^^^^^^ [2]: number

Error: hoisted2.js:243
243:   var y:number = x; // error
                      ^ Cannot assign `x` to `y` because possibly uninitialized variable [1] is incompatible with number [2].
  References:
  241:     var x:number = 0;
               ^ [1]: possibly uninitialized variable
  243:   var y:number = x; // error
               ^^^^^^ [2]: number

Error: hoisted2.js:256
256:   var y:number = x; // error
                      ^ Cannot assign `x` to `y` because uninitialized variable [1] is incompatible with number [2].
  References:
  257:   for (var x of [1, 2, 3]) {
                  ^ [1]: uninitialized variable
  256:   var y:number = x; // error
               ^^^^^^ [2]: number

Error: hoisted2.js:267
267:   var y:number = x; // error
                      ^ Cannot assign `x` to `y` because possibly uninitialized variable [1] is incompatible with number [2].
  References:
  264:   for (var x of [1, 2, 3]) {
                  ^ [1]: possibly uninitialized variable
  267:   var y:number = x; // error
               ^^^^^^ [2]: number

Error: let.js:17
 17:   let z:number = x;   // error
                      ^ Cannot assign `x` to `z` because uninitialized variable [1] is incompatible with number [2].
  References:
   15:   let x:number;
             ^ [1]: uninitialized variable
   17:   let z:number = x;   // error
               ^^^^^^ [2]: number

Error: let.js:24
 24:   let x = x;  // 'x' not initialized!
               ^ Cannot use variable `x` [1] because the declaration either comes later or was skipped.
  References:
   24:   let x = x;  // 'x' not initialized!
             ^ [1]: `x`

Error: let.js:33
 33:   var y:number = x; // error, possibly uninitialized
                      ^ Cannot assign `x` to `y` because possibly uninitialized variable [1] is incompatible with number [2].
  References:
   29:   let x:number;
             ^ [1]: possibly uninitialized variable
   33:   var y:number = x; // error, possibly uninitialized
               ^^^^^^ [2]: number

Error: let.js:58
 58:   var y:number = x; // error, possibly uninitialized
                      ^ Cannot assign `x` to `y` because possibly uninitialized variable [1] is incompatible with number [2].
  References:
   49:   let x:number;
             ^ [1]: possibly uninitialized variable
   58:   var y:number = x; // error, possibly uninitialized
               ^^^^^^ [2]: number

Error: let.js:83
 83:       let y:number = x; // error, skipped declaration
                          ^ Cannot use variable `x` [1] because the declaration either comes later or was skipped.
  References:
   81:       let x:number;
                 ^ [1]: `x`

Error: let.js:93
 93:   var y:number = x; // error
                      ^ Cannot assign `x` to `y` because possibly uninitialized variable [1] is incompatible with number [2].
  References:
   89:   let x:number;
             ^ [1]: possibly uninitialized variable
   93:   var y:number = x; // error
               ^^^^^^ [2]: number

Error: let.js:111
111:   var y:number = x; // error
                      ^ Cannot assign `x` to `y` because possibly uninitialized variable [1] is incompatible with number [2].
  References:
  107:   var x:number;
             ^ [1]: possibly uninitialized variable
  111:   var y:number = x; // error
               ^^^^^^ [2]: number

Error: let.js:120
120:   var y:number = x; // error
                      ^ Cannot assign `x` to `y` because possibly uninitialized variable [1] is incompatible with number [2].
  References:
  116:   var x:number;
             ^ [1]: possibly uninitialized variable
  120:   var y:number = x; // error
               ^^^^^^ [2]: number


Found 31 errors
